--- a/github.html
+++ b/github.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="pacote-d013/imagens/github.png" alt="Github">
-    <a href="https://github.com/luiz-eduardooo" id="verde">Acesse</a>
+    <a href="https://github.com/luiz-eduardooo" id="verde" target="_blank">Acesse</a>
 </body>
 </html>
