--- a/twitter.html
+++ b/twitter.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="pacote-d013/imagens/twitter.png" alt="Twitter">
-    <a href="https://x.com/luizeduardoxd2" id="azul">Acesse</a>
+    <a href="https://x.com/luizeduardoxd2" id="azul" target="_blank">Acesse</a>
 </body>
 </html>
