--- a/instagram.html
+++ b/instagram.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="pacote-d013/imagens/instagram.png" alt="">
-    <a href="https://www.instagram.com/luiz_eduardoxd/">Acesse</a>
+    <a href="https://www.instagram.com/luiz_eduardoxd/" target="_blank">Acesse</a>
 </body>
 </html>
